# axum-vue-admin

./: .env.example  .gitignore  .vercelignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: rust.yml  vercel.yml
api/: axum.rs
apps/api/: Cargo.toml
apps/api/src/: app.rs  docs.rs  errors.rs  lib.rs  main.rs  router.rs  state.rs
apps/api/src/auth/: errors.rs  mod.rs  session.rs
apps/api/src/extractors/: current_user.rs
apps/api/src/middleware/: auth.rs
apps/api/src/request/: errors.rs
apps/api/src/routes/: mod.rs  protected.rs  public.rs
apps/api/src/routes/apis/: dto.rs  error.rs  handler.rs
apps/api/src/routes/attachment_categories/: dto.rs  error.rs  handler.rs  mod.rs
apps/api/src/routes/auth/: dto.rs  error.rs  handler.rs  mod.rs  operation.rs
apps/api/src/routes/departments/: handler.rs
apps/api/src/routes/dictionaries/: dto.rs  handler.rs
apps/api/src/routes/dictionary_details/: dto.rs  error.rs  handler.rs
apps/api/src/routes/files/: dto.rs  handler.rs
apps/api/src/routes/init/: handler.rs
apps/api/src/routes/login_logs/: dto.rs  handler.rs
apps/api/src/routes/menus/: dto.rs  error.rs  handler.rs
apps/api/src/routes/operation_logs/: dto.rs  handler.rs
apps/api/src/routes/parameters/: dto.rs  handler.rs
apps/api/src/routes/permissions/: dto.rs  error.rs  handler.rs
apps/api/src/routes/protected/: api.rs  attachment_category.rs  authority.rs  dept.rs  dictionary.rs  dictionary_detail.rs  file.rs  jwt.rs  logs.rs  menu.rs  mod.rs  params.rs  permission.rs  role.rs  session.rs  system.rs  user.rs
apps/api/src/routes/public/: auth.rs  captcha.rs  health.rs  init.rs  mod.rs
apps/api/src/routes/roles/: dto.rs  error.rs  handler.rs
apps/api/src/routes/session/: handler.rs
apps/api/src/routes/users/: dto.rs  error.rs  handler.rs  mod.rs
apps/api/tests/: health.rs
apps/ava/: Cargo.toml
apps/ava/src/: app.rs  cli.rs  config.rs  lib.rs  main.rs
apps/ava/src/commands/: init.rs  serve.rs
apps/desktop/: .oxfmtrc.json  .oxlintrc.json  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.vue  main.ts  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
apps/web/src/: main.tsx  styles.css
crates/api/: Cargo.toml
crates/api/src/: docs.rs  error.rs  errors.rs  lib.rs  mappings.rs  request_id.rs  response.rs  router.rs  server.rs  state.rs
crates/api/src/extractors/: client_ip.rs  current_access.rs  current_user.rs  mod.rs  user_agent.rs
crates/api/src/middleware/: auth.rs
crates/api/src/routes/: mod.rs  protected.rs  public.rs
crates/api/src/routes/audit/: mod.rs
crates/api/src/routes/audit/events/: dto.rs  handler.rs  mod.rs
crates/api/src/routes/audit/login_logs/: dto.rs  error.rs  handler.rs
crates/api/src/routes/audit/operation_logs/: dto.rs  error.rs  handler.rs
crates/api/src/routes/auth/: captcha.rs  error.rs  login.rs  logout.rs  mod.rs  refresh.rs
crates/api/src/routes/departments/: dto.rs  error.rs  handler.rs  mod.rs
crates/api/src/routes/dictionaries/: dto.rs  error.rs  handler.rs  mod.rs
crates/api/src/routes/dictionaries/details/: dto.rs  error.rs  handler.rs
crates/api/src/routes/files/: dto.rs  error.rs  handler.rs  mod.rs
crates/api/src/routes/health/: handler.rs
crates/api/src/routes/menus/: dto.rs  error.rs  handler.rs  mod.rs
crates/api/src/routes/parameters/: dto.rs  error.rs  handler.rs
crates/api/src/routes/roles/: dto.rs  error.rs  handler.rs
crates/api/src/routes/users/: dto.rs  handler.rs  mod.rs
crates/api/tests/: health.rs
crates/audit/: Cargo.toml
crates/audit/src/: analysis.rs  event.rs  lib.rs  service.rs
crates/audit/src/login_logs/: error.rs  mod.rs  model.rs  request.rs  service.rs
crates/audit/src/operation_logs/: error.rs  mod.rs  model.rs  request.rs  service.rs
crates/audit/tests/: events.rs
crates/auth/: Cargo.toml
crates/auth/src/: captcha.rs  jwt.rs  lib.rs  password.rs  session.rs  token.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/file-storage/: Cargo.toml
crates/file-storage/src/: category.rs  errors.rs  files.rs  lib.rs
crates/file-storage/tests/: uploads.rs
crates/httpz/: Cargo.toml
crates/httpz/src/: lib.rs  response.rs
crates/httpz/src/error/: app.rs  kind.rs  mod.rs  spec.rs
crates/iam/: Cargo.toml
crates/iam/src/: lib.rs
crates/iam/src/access/: catalog.rs  error.rs  mod.rs  scope.rs  service.rs
crates/iam/src/api_permissions/: mod.rs  resolver.rs
crates/iam/src/apis/: error.rs  mod.rs  model.rs  request.rs  service.rs
crates/iam/src/authority/: mod.rs  model.rs
crates/iam/src/authorization/: catalog.rs  error.rs  mod.rs  service.rs
crates/iam/src/data_scope/: mod.rs  policy.rs
crates/iam/src/departments/: error.rs  mod.rs  model.rs  request.rs  service.rs
crates/iam/src/menus/: error.rs  mod.rs  service.rs
crates/iam/src/permissions/: error.rs  mod.rs  model.rs  request.rs  service.rs
crates/iam/src/roles/: error.rs  mod.rs  model.rs  request.rs  service.rs
crates/iam/src/users/: error.rs  mod.rs  model.rs  request.rs  service.rs
crates/menu/: Cargo.toml
crates/metadata/: Cargo.toml
crates/system/: Cargo.toml
crates/system/src/: api_registry.rs  authority.rs  data_scope.rs  depts.rs  dictionary.rs  errors.rs  lib.rs  logs.rs  menu.rs  params.rs  permission_apis.rs  permissions.rs  roles.rs  users.rs
docs/architecture/: api-schema-boundary.md
docs/sql/: init.sql
migrations/: 0001_init.sql  0001_schema.sql  0002_mature_rbac.sql  0002_rbac.sql  0002_seed.sql  0002_user_fields.sql  0003_authorities_menus.sql  0003_seed.sql  0003_seed_permission_apis.sql  0004_apis_and_logs.sql  0004_audit_analysis_api.sql  0004_backfill_menu_permissions.sql  0005_audit_stats_api.sql  0005_params_dictionary_files.sql  0005_remove_obsolete_role_permission_menu_actions.sql  0006_migrate_legacy_authorities_to_roles.sql
(+249 files in other folders)
