[package]
name = "axum-admin"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[workspace]
members = [
  "apps/ava",
  "crates/api",
  "crates/audit",
  "crates/auth",
  "crates/db",
  "crates/file-storage",
  "crates/iam",
  "crates/metadata",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
# Local workspace crates. This lets us reference them in other crates without specifying a path.
api = { path = "crates/api" }
audit = { path = "crates/audit" }
auth = { path = "crates/auth" }
ava = { path = "apps/ava" }
db = { path = "crates/db" }
file-storage = { path = "crates/file-storage" }
iam = { path = "crates/iam" }
metadata = { path = "crates/metadata" }

# External crates.
anyhow = "1"
argon2 = { version = "0.6.0-rc.8", features = ["getrandom", "password-hash"] }
axum = { version = "0.8", features = ["json", "multipart"] }
axum-otel = "0.33.1"
captcha-rs = "0.5"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
hex = "0.4"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
password-hash = { version = "0.6.1", features = ["getrandom", "phc"] }
redis = { version = "1", features = ["tokio-rustls-comp"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
sqlx = { version = "0.9", features = [
  "migrate",
  "postgres",
  "runtime-tokio",
  "time",
  "tls-rustls",
] }
strum = { version = "0.28", features = ["derive"] }
strum_macros = { version = "0.28" }
thiserror = "2"
time = { version = "0.3", features = ["parsing"] }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "net",
  "fs",
  "io-util",
] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6.11", features = [
  "cors",
  "fs",
  "request-id",
  "trace",
] }
tracing = "0.1"
tracing-error = "0.2"
tracing-otel = { version = "0.33.1", features = ["env"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1", features = ["v4"] }
vercel_runtime = { version = "2.4", features = ["axum"] }

[dependencies]
# Local workspace crates.
api.workspace = true
ava.workspace = true

# External crates.
tokio.workspace = true
tower.workspace = true
vercel_runtime.workspace = true

[[bin]]
name = "axum-admin"
path = "api/axum.rs"
