[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Local workspace crates
admin-httpz.workspace = true
auth.workspace = true
db.workspace = true
file-storage.workspace = true
system.workspace = true

# External crates.
axum.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
