[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "api"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "bootstrap"
path = "bin/bootstrap.rs"

[dependencies]
# Local workspace crates
admin-httpz.workspace = true
auth.workspace = true
db.workspace = true
file-storage.workspace = true
system.workspace = true

# External crates.
axum.workspace = true
axum-otel.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
hex.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-otel-extra.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
