[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Local workspace crates
admin-httpz.workspace = true
audit.workspace = true
auth.workspace = true
db.workspace = true
file-storage.workspace = true
iam.workspace = true
metadata.workspace = true

# External crates.
axum.workspace = true
axum-otel.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-otel-extra.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
