[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Local workspace crates
audit.workspace = true
auth.workspace = true
db.workspace = true
file-storage.workspace = true
iam.workspace = true
metadata.workspace = true

# External crates.
anyhow.workspace = true
axum.workspace = true
axum-otel.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-otel-extra.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

[dev-dependencies]
jsonwebtoken.workspace = true
sqlx.workspace = true
