[package]
name = "auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# External crates.
argon2.workspace = true
captcha-rs.workspace = true
hex.workspace = true
jsonwebtoken.workspace = true
password-hash.workspace = true
redis.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
