[package]
name = "iam"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
audit.workspace = true
auth.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
strum.workspace = true
thiserror.workspace = true
utoipa.workspace = true
uuid.workspace = true
