[package]
name = "system"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Local workspace crates
admin-httpz.workspace = true
auth.workspace = true

# External crates.
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
utoipa.workspace = true
uuid.workspace = true
